// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> should have the right class names when error is passed 1`] = `
<div
  className="slds-form-element slds-has-error"
>
  <div
    className="slds-form-element__control"
  >
    <input
      aria-describedby="error-message-3"
      className="slds-input"
      disabled={false}
      id="input-1"
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={true}
      type="text"
    />
  </div>
  <div
    className="slds-form-element__help"
    id="error-message-3"
  >
    Error text
  </div>
</div>
`;

exports[`<Input/> should have the right class names when have a custom class 1`] = `
<div
  className="slds-form-element my-custom-class-name"
>
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input"
      disabled={false}
      id="input-1"
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when iconName is passed 1`] = `
<div
  className="slds-form-element"
>
  <div
    className="slds-form-element__control slds-input-has-icon slds-input-has-icon_left"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-input__icon slds-icon-text-default slds-input__icon_left"
    >
      <use
        xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
    <input
      className="slds-input"
      disabled={false}
      id="input-1"
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when iconName is passed and iconPosition is right 1`] = `
<div
  className="slds-form-element"
>
  <div
    className="slds-form-element__control slds-input-has-icon slds-input-has-icon_right"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-input__icon slds-icon-text-default slds-input__icon_right"
    >
      <use
        xlinkHref="/icons/utility-sprite/svg/symbols.svg#activity"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
    <input
      className="slds-input"
      disabled={false}
      id="input-1"
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when isBare 1`] = `
<div
  className="slds-form-element"
>
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-input_bare"
      disabled={false}
      id="input-1"
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input/> should have the right class names when isCentered 1`] = `
<div
  className="slds-form-element"
>
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-input_counter"
      disabled={false}
      id="input-1"
      onChange={[Function]}
      placeholder={null}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;
